repaired loss mainpage stretching by removing maxwidth property

--- a/css/style.css
+++ b/css/style.css
@@ -154,8 +154,7 @@ header #navigation-location__city {
 
 body {
   display: flex;
-  width: 320px;
-  max-width: 768px;
+  min-width: 320px;
   flex-direction: column;
   justify-content: center;
   margin: 0;
