--- a/sass/base/_mainbase.scss
+++ b/sass/base/_mainbase.scss
@@ -15,8 +15,8 @@
 
 body {
     display: flex;
-    width: 320px;
-    max-width: 768px;
+    min-width: 320px;
+    // max-width: 768px;
     flex-direction: column;
     justify-content: center;
     margin: 0;
